--- a/public/global.css
+++ b/public/global.css
@@ -60,3 +60,32 @@ button:active {
 button:focus {
 	border-color: #666;
 }
+
+table {
+	table-layout: fixed;
+	width: 60%;
+	border-collapse: collapse;
+	margin: 1rem;
+}
+
+caption {
+	font-size: 16pt;
+	font-weight: 600;
+	text-align: center;
+	margin-bottom: 10px;
+}
+
+table thead tr {
+	height: 1.5rem;
+}
+
+table td {
+	border: 1px solid black;
+}
+
+tbody tr:nth-child(odd) {
+	background-color: lightblue;
+}
+tbody tr:nth-child(even) {
+	background-color: white;
+}
